metadata: map errors from GstDiscoverer to RBMetaDataError codes

Without this, the check in rhythmdb for ignoring small unidentifiable files
doesn't work.

https://bugzilla.gnome.org/show_bug.cgi?id=751265